.tekton/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-bs-quarkus-el
  namespace: quarkusapp
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: bs-quarkus-el
spec:
  to:
    kind: Service
    name: el-bs-quarkus-el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
